need to fix overlap and scroll

--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -8,9 +8,11 @@ html, body {
   /* height: 100%; */
   width: 100%;
   overflow-x: hidden;
+  overflow-y: hidden;
   margin: 0;
   padding: 0;
   margin-bottom: 0;
+  overflow:auto;
 }
 
 .cursor {
